[package]
name = "json-rust"
version = "0.1.0"
edition = "2021"
authors = ["Qayum <Q@khaa.pk>"]
description = "A fast and lightweight JSON parser and serializer for Rust"
license = "other"
repository = "https://github.com/sohail/json-rust"
keywords = ["json", "parser", "serializer"]
categories = ["encoding", "parser-implementations"]

[dependencies]
regex = "1.0"

[dev-dependencies]


[[bench]]
name = "parse_benchmark"
harness = false