[package]
name = "json-rust"
version = "0.1.0"
edition = "2021"
authors = [""]
description = "A fast and lightweight JSON parser for Rust"
license = "other"
repository = "https://github.com/sohail/json-rust"
keywords = ["json", "parser"]
categories = ["encoding", "parser-implementations"]

[dependencies]
regex = "1.0"

[dev-dependencies]
